public interface MediaComponent {
    void display();
}
