public interface MediaFormat {
    void display();
}
